Mon Oct 16 14:24:01 BST 2000 Olly Betts

	* OmSocketLineBuf::do_readline: fixed core dump on time out.

Mon Oct 16 13:30:34 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add quartz_termlist.cc to CVS and uncommented it in the makefile.

Mon Oct 16 12:21:41 BST 2000 Olly Betts

	* indexer/indexgraph/indexerxml.cc: Quick bodge fix for XML_DTD_PATH
	  not being defined - needs the correct fix from Chris.

Fri Oct 13 16:03:09 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed some leaks in the indexer system

Fri Oct 13 13:47:32 BST 2000 Olly Betts

	* backends/quartz/Makefile.am: Commented out quartz_termlist.cc as
	  it's not yet in cvs and is blocking nightly snapshots.

Thu Oct 12 16:55:42 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Convert statssource pointer in LocalSubMatch into an AutoPtr, to
	  fix memory leak bug (exhibited if an exception is thrown in
	  constructor).

Thu Oct 12 16:49:04 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Changed the interface for creating indexer nodes.  
	  Inputs are all fetched at once by request_inputs(), which must
	  be called before any call to get_input_*.  It can be called
	  more than once.

	* The nodes now all use request_inputs()

Thu Oct 12 16:37:42 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* DatabaseBuilder::create() now returns a RefCntPtr, rather than a
	  bare pointer, to prevent accidents involving not referring to
	  a database by refcnt, making a {post,position,term}list, and then
	  accidentally deleting the termlist when that list is deleted (and
	  decrements the refcnt on the database back to 0).

	* Added an assert to refcnt, to ensure that a refcnt pointer isn't
	  made from `this', when this object isn't yet held by a reference
	  counted pointer.

	* Added a termlist to Quartz.  No implementation yet.

	* Removed some old debugging code from Quartz.

Thu Oct 12 14:45:03 BST 2000 Olly Betts
